선택한 style contents의 QR code 이미지 download되도록 수정

--- a/listPage/templates/mainStyleListPage.html
+++ b/listPage/templates/mainStyleListPage.html
@@ -46,6 +46,7 @@
           <div class="qrcode2"></div>
       </div>
       <div class="modal-footer">
+          <button type="button" class="btn btn-secondary dl">QR download</button>
         <button type="button" class="btn btn-secondary modal-close cl" data-dismiss="modal">Close</button>
       </div>
     </div>
@@ -70,10 +71,43 @@
         call_style_api();
         $(document)
         .on("click", ".cl" , function (){
-            $("canvas").remove();
-            console.log("wda");
+            $("canvas").remove(); // popup close했을 때 초기화되도록 한다. 캔퍼스(큐알코)을 삭제
+        })
+
+           // 다운로드 버튼 클릭
+        .on("click", ".dl", function (){
+            // canvas 지정
+            var can = $("canvas")[0];
+            // 이미지 링크 PNG로 생성
+            var QR = can.toDataURL('image/png');
+            // aTag 생성
+            var aTag = document.createElement("a");
+
+           // 다운로드시 이름
+            aTag.download = 'QR.png';
+            // 위에 링크 생성해준걸 등록
+            aTag.href = QR;
+            // aTag을 클릭하여 다운로드
+            aTag.click();
         })
     })
+
+
+
+    //scheme copy
+	$("#schemeCopy").click (
+        function() {
+            var urlInfo = document.getElementById("mainUrl");
+                rlInfo.select();
+					document.execCommand("Copy");
+					alert("Add scheme to clipboard!")
+				}
+			)
+
+
+
+
+
     function click_style_info(th)
     {
         $("#modal-style-id").empty();
@@ -82,11 +116,13 @@
         $("#modal-style-id").append(`<div>${s_id}</div>`);
         $("#modal-style-id").append(style_json);
 
+        // modal popup : https://getbootstrap.com/docs/4.0/components/modal/ 의 예제소스코드 참
 
 
 
-
+// s_id(Line 80)을 qr code로 생성
 $(".qrcode2").qrcode({
+        id:"qr",
 		render: "canvas",
 		width: 100,
 		height: 100,
@@ -115,11 +151,6 @@ function call_style_api() {
                             const style_id = result.result.styles[k].id;
                             const style_name = result.result.styles[k].name;
                             const style_thumb = result.result.cdnPrefix + result.result.styles[k].thumbnail;
-                            const newmarkEndDate = result.result.styles[k].newmarkEndDate;
-                            const thumbnail = result.result.styles[k].thumbnail;
-                            const thumbnailColor = result.result.styles[k].thumbnailColor;
-                            const updated = result.result.styles[k].updated;
-                            const version = result.result.styles[k].version;
 
                             style_json_info[style_id] = {"style_id":style_id, "style_name":style_name};
                             sub_html += `<div class="style_block" data-toggle="modal" data-target="#exampleModal" onclick="click_style_info($(this))"><div class="style-id">${style_id}</div>
@@ -153,10 +184,6 @@ function call_style_api() {
 // console.log(sub_html)
 // 자바스크립트에서 중괄호는 객체를 의미 , $ajax{}도 마찬가지이다.
 // style category를 group으로 나눈다.
-
-// 위에서 j까지 만들어 지고, 여기서부터 더해진다.
-// id, name이 보이게 한다.
-//
 
 
                 const html = `
