- style page에 app type 추가해서 선택할 수 있도록 ajax, mainStyleListPage.html 수정

--- a/listPage/templates/mainStyleListPage.html
+++ b/listPage/templates/mainStyleListPage.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
       <meta http-equiv="Pragma" content="no-cache">
       <meta charset="UTF-8">
-      <title>Style List</title>
+      <title>Beauty Recipes</title>
       <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
       <script type="text/javascript" src="{% static 'jquery.qrcode.js' %}"></script>
       <script type="text/javascript" src="{% static 'qrcode.js' %}"></script>
@@ -27,7 +27,6 @@
    </head>
 
    <body>
-        <h1>Style List</h1>
       <div class="content-main">
 
         </div>
