--- a/listPage/templates/mainStyleListPageSodaBeta.html
+++ b/listPage/templates/mainStyleListPageSodaBeta.html
@@ -14,7 +14,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
       <style>
-            .style_group
+          .style_group
             {
                 display: inline-flex;
             }
@@ -29,6 +29,42 @@
                 height: 150px;
                 line-height: 150px;
             }
+
+            .content-main > div {
+                display: flex;
+                align-items: center;
+                border-top: 3px dotted #ccc;
+                padding: 50px 0;
+            }
+
+            .c_name {
+                padding: 0 50px;
+            }
+
+            .style_block {
+                width: 150px;
+                height: 200px;
+                margin-right: 30px;
+            }
+
+            .style_block img {
+                width: 100%;
+                border-top-left-radius: 15px;
+                border-top-right-radius: 15px;
+            }
+
+            .style_name {
+                width: 100%;
+                height: 50px;
+                color: #fff;
+                background-color: #333;
+                font-size: 18px;
+                line-height: 50px;
+                text-align: center;
+                border-bottom-left-radius: 15px;
+                border-bottom-right-radius: 15px;
+            }
+
             .img img {
                 width: 150px;
                 height: 150px;
@@ -38,9 +74,14 @@
    </head>
 
    <body>
-   <h1>Style List</h1>
+   <h1>Style List(SODA BETA)</h1>
    <div>
        <br>
+<body>
+    <!-- body 부분 -->
+    스타일 검색 :
+    <input id="searchInput">
+</body>
 
        <br>
        <br>
@@ -221,11 +262,11 @@ function call_style_api() {
 
 
                                     <img src="${style_thumb}"></img>
-                                    <div>${style_name}</div>
+                                    <div class="style_name">${style_name}</div>
                                     <div class="hide_view_json" data-id="${style_id}" style="display: none">
                                         <div class="style_json">
                                         <div class="id" data-id="${style_id}">style_id : ${style_id}</div>
-                                        <div>style_name : ${style_name}</div>
+                                        <di>style_name : ${style_name}</di>
 
                                     </div>
 
@@ -253,9 +294,9 @@ function call_style_api() {
 
 
                 const html = `
-            <div className="contentsListContainer">
-                <div className="categoryNameColumn">
-                    ${gid}, ${gname}
+            <div className="contentsListContainer" class="c_box">
+                <div className="categoryNameColumn" class="c_name">
+                    <h2>${gid}</h2> <p>${gname}</p>
                 </div>
                   <div class="style_group">
                     ${sub_html}
