--- a/listPage/templates/FilterListPageFoodieCnBeta.html
+++ b/listPage/templates/FilterListPageFoodieCnBeta.html
@@ -83,7 +83,7 @@
    </head>
 
    <body>
-   <h1>filter List(Foodie BETA)</h1>
+   <h1>Filter List(FoodieCN BETA)</h1>
    <div>
        <br>
 <body>
