--- a/listPage/templates/FilterListPageFoodieReal.html
+++ b/listPage/templates/FilterListPageFoodieReal.html
@@ -83,7 +83,7 @@
    </head>
 
    <body>
-   <h1>filter List(Foodie REAL)</h1>
+   <h1>Filter List(Foodie REAL)</h1>
    <div>
        <br>
 <body>
