--- a/listPage/templates/FilterListPageFoodieBeta.html
+++ b/listPage/templates/FilterListPageFoodieBeta.html
@@ -40,14 +40,18 @@
             }
 
             .c_name {
-                padding: 0 30px;
+                margin: 0 30px;
+                min-width: 100px;
+                text-align: center;
+                height: 100%;
+                cursor: pointer;
             }
 
-            .filter_block {
-                margin-bottom: 30px;
+            .style_block {
                 width: 100px;
                 height: 130px;
-                margin-right: 30px;
+                margin: 15px 10px;
+                cursor: pointer;
             }
 
             .filter_block img {
@@ -191,8 +195,36 @@
 
 
 
-// s_id(Line 80)을 qr code로 생성
-$(".qrcode2").qrcode({
+        // s_id(Line 80)을 qr code로 생성
+        $(".qrcode2").qrcode({
+        id:"qr",
+        render: "canvas",
+        width: 100,
+        height: 100,
+        text: (s_id)
+
+      });
+
+    }
+
+
+    function infos(id , name)
+    {
+        $("#modal-filter-id").empty(); // .empty()는 선택한 요소의 내용을 지운다. 내용만 지울 뿐 태그는 남아있다.
+        let s_id = 'foodieb://go?categoryId=' + id;
+        $("#modal-filter-id").append(`<div>${s_id}</div>`);
+        let html = `
+        <div class="id">category id : ${id}</div>
+        <div>category name : ${name}</div>
+        `
+        $("#modal-filter-id").append(html);
+
+
+
+
+
+    // s_id(Line 80)을 qr code로 생성
+    $(".qrcode2").qrcode({
         id:"qr",
       render: "canvas",
       width: 100,
@@ -202,6 +234,7 @@ $(".qrcode2").qrcode({
       });
 
     }
+
 
 
 function call_filter_api() {
@@ -236,7 +269,7 @@ function call_filter_api() {
                                     <div class="hide_view_json" data-id="${filter_id}" style="display: none">
                                         <div class="filter_json">
                                         <div class="id" data-id="${filter_id}">filter_id : ${filter_id}</div>
-                                        <di>filter_name : ${filter_name}</di>
+                                        <div>filter_name : ${filter_name}</div>
 
                                     </div>
 
@@ -250,7 +283,7 @@ function call_filter_api() {
 
                 const html = `
             <div className="contentsListContainer" class="c_box">
-                <div className="categorytitleColumn" class="c_name">
+                <div className="categorytitleColumn" data-toggle="modal" data-target="#exampleModal" class="c_name" data-id="${gid}" data-name="${gname}">
                     <h2>${gid}</h2> <p>${gname}</p>
                 </div>
                   <div class="filter_group">
@@ -289,9 +322,14 @@ function call_filter_api() {
         $(".filter_block").removeClass("chk");
         $(".c"+c).addClass("chk");
       })
+      .on("click",".c_name", function(){
+        let id = $(this).data("id");
+        let name = $(this).data("name");
+        infos(id,name);
+      })
 
 
    })
 
 </script>
-</html>
+</html>\
