--- a/listPage/templates/discoverPageSodaReal.html
+++ b/listPage/templates/discoverPageSodaReal.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
       <meta http-equiv="Pragma" content="no-cache">
       <meta charset="UTF-8">
-      <title>Studio List Soda Beta</title>
+      <title>STUDIO LIST SODA REAL</title>
       <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
       <script type="text/javascript" src="/static/jquery.qrcode.js"></script>
       <script type="text/javascript" src="/static/qrcode.js"></script>
@@ -214,7 +214,7 @@ function call_studio_api() {
         .on("click" , ".m_ckh", function(){
             a = $(this).parent().data("id")
             aa = arr_tem[a];
-            link = "sodab://studio?templateId="+aa.id;
+            link = "soda://studio?templateId="+aa.id;
             html = `
                 <h3>id:${aa.id}</h3>
               <h3>name:${aa.name}</h3>
