--- a/listPage/templates/discoverPageTianyanBeta.html
+++ b/listPage/templates/discoverPageTianyanBeta.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
       <meta http-equiv="Pragma" content="no-cache">
       <meta charset="UTF-8">
-      <title>Studio List tianyan Beta</title>
+      <title>STUDIO LIST TIANYAN BETA</title>
       <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
       <script type="text/javascript" src="/static/jquery.qrcode.js"></script>
       <script type="text/javascript" src="/static/qrcode.js"></script>
